@@ -1,5 +1,6 @@
 07.00.2007 - 0.1.0a3:
-    * Expanded significantly upon testing.mock module
+    * Fixed bugs in testing.mock
+    * Significantly expanded upon testing.mock module
     * New function util.read_file
 
 07.08.2007 - 0.1.0a2:
